[gd_scene load_steps=4 format=3 uid="uid://rf7wridmxusx"]

[ext_resource type="Script" path="res://addons/bodypartcontrol/body_part_control.gd" id="1_mw8tq"]
[ext_resource type="Texture2D" uid="uid://dfmhkue1m240i" path="res://addons/bodypartcontrol/icons/new.png" id="2_n4h4e"]
[ext_resource type="Texture2D" uid="uid://c8ihyax2klfit" path="res://addons/bodypartcontrol/icons/remove.png" id="3_bspws"]

[node name="BodyPartControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mw8tq")

[node name="HSplitContainer" type="HBoxContainer" parent="."]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
bbcode_enabled = true
text = "[p align=center][ul][font_size=18][b]Actions list[/b][/font_size][/ul][/p]
[p align=justify]
Contains the list of actions that can be associated to sprites.
By selecting an action you can edit the textures it holds. Lter, in code you can call an action and select wich texture will be presented in editor and running code.
[/p]

[p align=center][ul][font_size=18][b]Add Button[/b][/font_size][/ul]
[img]res://addons/bodypartcontrol/icons/new.png[/img][/p]

[p align=justify]
Add a new texture to the action set.
You can edit it in the [b]Inspector window.[/b]
[/p]

[p align=center][ul][font_size=18][b]Remove Button[/b][/font_size][/ul]
[img]res://addons/bodypartcontrol/icons/remove.png[/img][/p]

[p align=justify]
Delete a  texture of the action set.
[/p]"

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="nodeActionList" type="ItemList" parent="HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer"]
layout_mode = 2
collapsed = true
dragger_visibility = 1

[node name="HSplitContainer" type="HSplitContainer" parent="HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
collapsed = true
dragger_visibility = 1

[node name="AddImage" type="Button" parent="HSplitContainer/VSplitContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Add New Texture"
icon = ExtResource("2_n4h4e")

[node name="DeleteImage" type="Button" parent="HSplitContainer/VSplitContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Remove Texture"
icon = ExtResource("3_bspws")

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="TexturesContainer" type="GridContainer" parent="HSplitContainer/VSplitContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
columns = 5

[connection signal="item_selected" from="HSplitContainer/VBoxContainer/nodeActionList" to="." method="_on_node_action_list_item_selected"]
[connection signal="pressed" from="HSplitContainer/VSplitContainer/HSplitContainer/AddImage" to="." method="_on_add_image_pressed"]
[connection signal="pressed" from="HSplitContainer/VSplitContainer/HSplitContainer/DeleteImage" to="." method="_on_delete_image_pressed"]
